# rust_project_struct

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chef  Makefile  README.md  TRANSFORMATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  projectmap.yaml
_base/: BOUNDARIES_GUIDE.md  BOUNDARIES_crypto-management.md  BOUNDARIES_crypto-notifications.md  BOUNDARIES_crypto-signals.md  BOUNDARIES_crypto-trader.md  BOUNDARIES_crypto-webhook.md  IMPLEMENTATION_PATTERNS.md  LLM_IMPLEMENTATION_PROMPT.md  Prompt do Ecossistema Crypto Tradin.ini  crypto-management_projectmap.yaml  crypto-notifications_projectmap.yaml  crypto-signals_projectmap.yaml  crypto-trader_projectmap.yaml  crypto-webhook_projectmap.yaml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  README.md  TEMPLATE.md
scripts/: db_collation_maint.sh  flyway_repair.sh
scripts/docker/: entrypoint.sh
scripts/kafka/: kafka_init.sh
scripts/schema-registry/: schema-registry-init.py
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dtos/: mod.rs
src/application/ports/: event_store.rs  mod.rs  projection_store.rs
src/application/queries/: mod.rs
src/application/services/: mod.rs
src/domain/: errors.rs  mod.rs
src/domain/aggregates/: mod.rs
src/domain/entities/: mod.rs
src/domain/events/: mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/bootstrap/: database.rs  mod.rs
src/shared/: errors.rs  mod.rs  types.rs
src/shared/utils/: mod.rs  (+2 more)
(+22 files in other folders)
