[package]
name = "project-struct-base"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (optional - add if needed)
axum = "0.8.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database / persistence
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }

# Event sourcing utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Config
config = "0.14"
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Async traits
async-trait = "0.1"

# Misc
once_cell = "1"
parking_lot = "0.12"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTTP client (optional - for external APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
